Dark Mode for Chrome 拡張機能の変更を追加***
このコミットには、Dark Mode for Chrome 拡張機能に関する変更が含まれています。拡張機能のマニフェストファイル、バックグラウンドスクリプト、コンテンツスクリプト、スタイルシート、オプションページのファイルが変更されました。また、ダークモードの状態を保存するためにストレージが使用されています。さらに、ダークモードのオン/オフを切り替えるためのアイコンのクリックイベントや他のタブへの変更の反映など、機能の改善も行われています。

--- a/options.html
+++ b/options.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Dark Mode for Chrome - オプション</title>
+  <title>Dark Mode for Chrome - Options</title>
 </head>
 <body>
-  <h1>Dark Mode for Chrome - オプション</h1>
+  <h1>Dark Mode for Chrome - Options</h1>
   <label>
     <input type="checkbox" id="darkModeEnabled">
-    ダークモードを有効にする
+    Enable Dark Mode
   </label>
   <script src="options.js"></script>
 </body>
